php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #11796 get_meta_tags doesn't work when the title tag consists of single quote
Submitted: 2001-06-29 03:18 UTC Modified: 2001-07-03 03:54 UTC
From: teocl at globalsources dot com Assigned: elixer (profile)
Status: Closed Package: Unknown/Other Function
PHP Version: 4.0.5 OS: Linux
Private report: No CVE-ID: None
 [2001-06-29 03:18 UTC] teocl at globalsources dot com
get_meta_tags will get nothing when this statics file is used.(please see the code down there)
Only when the single quote inside the title tag removed, then the meta will be retrieved. I have tried to use this code inside PHP Version 4.0.4, and it works. 
Does anyone has any clue about it?


<html>
<head>
<TITLE>Sanmina acquires Alcatel's manufacturing operations in Texas</TITLE>
<META NAME="VERSION" CONTENT="2.1"/>
<META NAME="ISSUE" CONTENT="121345"/>
<META NAME="STARTDATE" CONTENT="27-JUN-2001"/>
</head>
</html>

Thanks.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-06-29 13:27 UTC] sniper@php.net
Reproduced with latest CVS.

 [2001-06-30 11:35 UTC] elixer@php.net
I'll take this one.
 [2001-06-30 16:04 UTC] elixer@php.net
Fixed in latest CVS.  Thank you for your report.
 [2001-07-02 04:05 UTC] teocl at globalsources dot com
where can I get the latest CVS? Thanks.
 [2001-07-02 04:12 UTC] derick@php.net
Either grab a snapshot form snaps.php.net or follow the instructions on getting the CVS version on: www.php.net/anoncvs.php

Derick
 [2001-07-03 02:12 UTC] teocl at globalsources dot com
Hi, have another question.
Is this bug fixed in 4.0.6?
If so, I would rather upgrade my php to 4.0.6.

Thanks.



 [2001-07-03 03:01 UTC] derick@php.net
From the ChangeLog:

2001-03-06  Sean Bright  <elixer@erols.com>

    * ext/standard/file.c: Typo.

    * ext/standard/file.c:
    get_meta_tags now allows attributes that are not quoted as well as those
    that are.  It follows the HTML 4.01 specification for attribute values
    outlined here -> http://www.w3.org/TR/html4/intro/sgmltut.html#h-3.2.2

You could have checked this yourself BTW.

Derick
 [2001-07-03 03:03 UTC] derick@php.net
nm, wrong entry
 [2001-07-03 03:54 UTC] teocl at globalsources dot com
Hi, have another question.
Is this bug fixed in 4.0.6?
If so, I would rather upgrade my php to 4.0.6.

Thanks.



 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Aug 23 14:00:01 2026 UTC