Fix for bug #11796.  Also, fixed a problem in get_meta_tags that required NAME and CONTENT to be in that order.  Meta tags with no CONTENT attribute are now added to the array as empty strings.  Meta tags with no NAME attribute are ignored.